partially completed task assignment algo part 2